--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "https": "^1.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
