--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "https": "^1.0.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
